<resources>
  <string name="app_name" translatable="false">DWSDK</string>
  <string name="LoBatteryTitle">Low Battery</string>
  <string name="LowBatteryMsg">Approximately X% of battery remaining.</string>
  <string name="Enable_Production" translatable="false">false</string>
  <string name="PARENT" translatable="false">PARENT</string>
  <string name="Have_Playset">Before we get started, do you the Deepwaterooo playset?</string>
  <string name="Have_Account">Do you have a Deepwaterooo account?</string>
  <string name="Not_Yet_New_User">Not yet, I\'m a new user.</string>
  <string name="English">English</string>
  <string name="Chinese">中文（简体）</string>
  <string name="Username">Username</string>
  <string name="Password">Password</string>
  <string name="Log_In">Log In</string>
  <string name="Forgot_Password"><u>Forgot your password?</u></string>
  <string name="New_User_Account"><u>New User? Create an Account.</u></string>
  <string name="gameID">56cab8e937f4c94f14bf5502</string>
  <string name="Resp_423_Title">Hmm...that account doesn\'t exist.</string>
  <string name="Resp_423_msg">If you have an account and believe you have received this message in error, please visit our help area.</string>
  <string name="Login_Mail_Not_Found_Title">Hmm...that account doesn\'t exist.</string>
  <string name="Login_Mail_Not_Found_Message">If you have an account and believe you have received this message in error, please visit our help area.</string>
  <string name="Create_Account">Create a Deepwaterooo Account</string>
  <string name="Firstname">Grown-up\'s First Name</string>
  <string name="Lastname">Grown-up\'s Last Name</string>
  <string name="Email">Grown-up\'s Email</string>
  <string name="Retype_Password">Re-Enter Password</string>
  <string name="Next">Next</string>
  <string name="User_Have_Account"><u>Already have an account? Log in.</u></string>
  <string name="Stay_Up_To_Date_Msg"><u>Stay up to date with the latest Deepwaterooo news!</u></string>
  <string name="ForgotPassword">Forgot your password?</string>
  <string name="Email_Hint">Email</string>
  <string name="Forgot_Password_Title">We all do! Those pesky passwords.</string>
  <string name="Forgot_Password_Text">Don\'t worry, we\'ll send you an email that\nwill allow you
  to reset your password.</string>
  <string name="Forgot_Password_Success">You will receive an email shortly that will allow you to reset your password.</string>
  <string name="Email_Not_Active">Your email status not in active. Please contact admin.</string>
  <string name="Privacy_Policy">Privacy Policy</string>
  <string name="Submit">Submit</string>
  <string name="IAgree">I Agree</string>
  <string name="Cancel">Cancel</string>
  <string name="Close">Close</string>
  <string name="Privacy_Policy_Text"></string>
  <string name="Terms_and_Conditions">Terms and Conditions</string>
  <string name="Failed">Failed</string>
  <string name="Failedd">Failed!</string>
  <string name="Resend_Email">Resend Email</string>
  <string name="Take_me_Login">OK, take me to Log In</string>
  <string name="Activate_Account">Activate your account!</string>
  <string name="Activate_Account_Text">We\'ve sent a verification email to %s. Please click on the Activate button to verify your account.
  If you can\'t find it, be sure to check your SPAM folder!</string>
  <string name="Before_Start">Before we get started, do you have \nthe Deepwaterooo playset?</string>
  <string name="Yes">Yes!</string>
  <string name="What_Playset">What\'s a Playset?</string>
  <string name="Ok">OK</string>
  <string name="We_Need_Internet">We need internet!</string>
  <string name="Please_Connect_Internet">Please connect to an internet source.</string>
  <string name="Please_Wait"></string>
  <string name="Loading">Loading</string>
  <string name="Warning">Warning</string>
  <string name="Email_Verification">Email Verification</string>
  <string name="Resend_Message">Resend Message</string>
  <string name="EnableBluetooth">Enable Bluetooth</string>
  <string name="EnableBluetoothMsg">Looks like your device bluetooth isn\'t enabled yet. Please go to your device Settings to turn bluetooth on.</string>
  <string name="Empty_Username">Please enter your email.</string>
  <string name="Empty_Password">Please enter your password.</string>
  <string name="Provide_Password">Please provide a password.</string>
  <string name="Invalid_Email_format">That doesn\'t look like a valid email. Please check for typos.</string>
  <string name="Invalid_Password">The email or password is incorrect.\n\nIf you have forgotten your password, you can reset it.</string>
  <string name="User_does_not_exits">Sorry, we don\'t recognize that email.</string>
  <string name="Email_not_verified">Looks like your account has not yet been activated. Check your email for a message from Deepwaterooo.</string>
  <string name="Login_failure_in_unknown_case">Something is wrong on our end.  Please, try again later.</string>
  <string name="Without_giving_any_input">Please fill in</string>
  <string name="Empty_Grownups_First_Name">Please enter Grown-up\'s First Name</string>
  <string name="Empty_Grownups_Last_Name">Please enter Grown-up\'s Last Name</string>
  <string name="Empty_Grown_ups_Email">Please enter Grown-up\'s Email</string>
  <string name="Password_Length">Please choose a password with at least 8 characters.</string>
  <string name="Empty_Retype_Password">Please re-enter your password.</string>
  <string name="Password_RetypePassword_Match">That\'s not the same password as the first one.</string>
  <string name="Email_Already_Exists">That email has already been used to create a Deepwaterooo account.
  \n\n If you\'ve forgotten your password, you can reset it.</string>
  <string name="Email_Not_Verified">Looks like your account has not yet been activated.
  Check your email for a message from Deepwaterooo.</string>
  <string name="Failure_Unknown_Case">Something is wrong on our end.  Please, try again later.</string>
  <string name="ForgotPwd_Success">You will receive an email shortly that will allow you to reset your password.</string>
  <string name="Bluetooth_OFF">Looks like your bluetooth isn\'t enabled yet.
  Please go to your Settings to turn Bluetooth on.</string>
  <string name="Whoops">Whoops!</string>
  <string name="Oops">Oops!</string>
  <string name="Hmm">Hmm...</string>
  <string name="Sorry">Sorry!</string>
  <string name="Sent">Sent.</string>
  <string name="Done">Done!</string>
  <string name="Empty"></string>
  <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
  <string name="ble_not_supported">BLE is not supported</string>
  <string name="unknown_device">Unknown device</string>
  <string name="Resend_Email_Message">You will receive an email shortly that will allow you to verify your account.</string>
  <string name="Resend_Email_Already_Activated">Your account has already been activated. You can continue with Login.</string>
<string name="Turn_On_Playset_Message">Turn on your playset.</string>
<string name="Back">Back</string>
<string name="SelectaPlayset">Tap on your playset icon below.</string>
<string name="Searching">Searching...</string>
<string name="UpgradeTitle">Playset upgrade available!</string>
<string name="UpgradeMsg">A firmware update is available for your playset. \nWould you like to update now? It will just take a \nfew minutes.</string>
<string name="UpgradeNow">Upgrade Now</string>
<string name="Later">Later</string>
<string name="Updating">Updating...</string>
<string name="UpdateProgressMsg">Please do not turn off your playset or mobile device. Thanks for waiting, it\'ll just be a moment</string>
<string name="UpgradeFirmwareFailure">Something went wrong. Please try again.</string>
<string name="UpdateCompleteTitle">Update Complete!</string>
<string name="UpdateCompleteMsg">Your playset is now better than ever!</string>
<string name="RememberPlayset">Remember Playset</string>
<string name="ChooseDifferentPlaset">Choose a different playset</string>
<string name="BatterySaver">Battery Saver</string>
<string name="BatterySaverMsg">We\'ll turn off your playset for you if \nwe detect a long period of inactivity.</string>
<string name="ManagePlayset">Manage Playset</string>
<string name="RenamePlayset">Rename Playset</string>
<string name="Disconnect">Disconnect</string>
<string name="Calibrate">Calibrate</string>
<string name="Save">Save</string>
<string name="RenameMsg">Please enter a proper playset name.</string>
<string name="Calibration_Title">Clear the letters!</string>
<string name="Calibration_Button">Playset is clear. Calibrate!</string>
<string name="Calibration_Message">Calibrating your playset will help improve its accuracy.
Please clear the playset of all letters. when you\'re ready, press the button below.</string>
<string name="Calibration_Success_Dialog_Title">Done!</string>
<string name="Calibration_Success_Dialog">Your playset has been successfully calibrated.</string>
<string name="Calibration_Still_LettersMsg"> <u>My playset is clear, but I\'m still seeing this message...</u></string>
<string name="Idle_Playset_Title">Are you there?</string>
<string name="Idle_Playset_Message">We haven\'t detected any activity for a while, so we turned off your playset for you.</string>
<string name="Idle_Playset_Button">I\'m here!</string>
<string name="Add_Players">Add Players</string>
<string name="AddPlayer">Add Player</string>
<string name="Add_Player_Msg">Add players to your account so that each child can enjoy their own personal learning process. You can add up to %s players in your account.</string>
<string name="Add_Player">Add Player</string>
<string name="Edit_Player">Edit Player</string>
<string name="Continue">Continue</string>
<string name="Manage_Player">Manage Players</string>
<string name="SelectAPlayer">Select a Player</string>
<string name="EditPlayerMsg">Select a player to edit.</string>
<string name="DoneEditing">Done Editing</string>
<string name="EnterPlayerBirthday">Please enter the player\'s birthday.</string>
<string name="EnterPlayerFirstName">Please enter the player\'s first name.</string>
<string name="EnterPlayerLastName">Please enter the player\'s last name.</string>
<string name="EnterPlayerGender">Please select the player\'s gender.</string>
<string name="EnterPlayerIEPDescription">Please enter the player\'s IEP.</string>
<string name="Delete">Delete</string>
<string name="DeletePlayerTitle">Are you sure?</string>
<string name="DeletePlayerMsg">Deleting this player will wipe curriculum advancement and game progress across all games, and will not be recoverable.</string>
<string name="DeletePlayerInfo">If you would like more info about our privacy policies click here to read more</string>
<string name="click_here_to_read_more">click here to read more</string>
<string name="NewMessage">New Message</string>
<string name="DeletePlayerInfoTitle">What happens to the data?</string>
<string name="DeletePlayerInfoMsg">When you delete a player, we permanently delete any and all player identifiers from Deepwaterooo servers.
This includes the player\'s name, birthday and picture.\n\nDeepwaterooo anonymizes and retains the player\'s educational activity (i.e. what
words they spelled, what mistakes they made). We use this information only to help improve our products. For maximum privacy protection, the data
is not traceable back to your account or other players in your account.</string>
<string name="Grade">Grade</string>
<string name="Student_id">Student ID</string>
<string name="ParentEmail">Parent Email</string>
<string name="IEP">IEP</string>
<string name="Languages">Languages</string>
<string name="LastName">Last Name</string>
<string name="StudentsFirstName">Student\'s First Name</string>
<string name="are_you_teacher">Are you a teacher?</string>
<string name="create_a_teacher">Yes, create a teacher account.</string>
<string name="not_a_teacher">No, I am not a teacher.</string>
</resources>