<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orange_bg"
    android:orientation="vertical"
    tools:context="com.deepwaterooo.dwsdk.activities.authentication.DWActivateAccountActivity"
    tools:ignore="MissingPrefix">

    <ImageView
        android:id="@+id/ivSPLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/five_dip"
        android:src="@drawable/orange_panda" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            fontPath="fonts/averta.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:padding="@dimen/ten_dip"
            android:text="@string/Activate_Account"
            android:textColor="@android:color/white"
            android:textSize="@dimen/thirty_sp" />

        <TextView
            android:id="@+id/tvMailSentTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/thirty_dip"
            android:layout_marginBottom="@dimen/forty_dip"
            android:layout_marginLeft="@dimen/forty_dip"
            android:layout_marginRight="@dimen/forty_dip"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:padding="@dimen/ten_dip"
            android:text="@string/Activate_Account_Text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/twenty_five_sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/thirty_dip"
            android:layout_marginRight="@dimen/thirty_dip"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnResendEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/twenty_dip"
                android:background="@drawable/button_background"
                android:padding="@dimen/ten_dip"
                android:text="@string/Resend_Email"
                android:textColor="@android:color/white"
                android:textSize="@dimen/twenty_five_sp" />

            <Button
                android:id="@+id/btnTakeMeLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/twenty_dip"
                android:background="@drawable/button_background"
                android:padding="@dimen/ten_dip"
                android:text="@string/Take_me_Login"
                android:textColor="@android:color/white"
                android:textSize="@dimen/twenty_five_sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
